fix bug on about me page with image sizing on smaller screen

--- a/src/components/about-me/about-me.styles.scss
+++ b/src/components/about-me/about-me.styles.scss
@@ -10,6 +10,15 @@
         
     }
 
+    .contactLink{
+        text-decoration: underline;
+        color:rgb(114, 47, 158) !important;
+        font-weight: 700;
+        &:visited{
+            color:unset;
+        }
+    }    
+
     .job-title{
         font-style: italic;
     }
